# markowitz

./: .gitignore  LICENSE  README.md  pyproject.toml
markowitz/: cli.py  formatters.py  gui.py  portfolio.py
scripts/: sample-data-generator.py
tests/: test_portfolio.py
