[tool.poetry]
name = "markowitz"
version = "0.1.0"
description = "Markowitz Portfolio Optimization CLI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
fire = "^0.7.0"
nicegui = "^2.7.0"
pandas-stubs = "^2.2.3.241009"
plotly = "^5.24.1"
gradio = "^5.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
markowitz = "markowitz.cli:main"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Include all files and notebooks
include = ["*.py", "*.ipynb"]

